--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
+    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
+    "rootDir": ".",
     "outDir": "dist",
-    "rootDir": "src",
     "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
-  }
+    "esModuleInterop": true
+  },
+  "include": ["src", "prisma"]
 }
