--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,10 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/index.ts",
+    "start": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
