--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch src --ext ts --exec ts-node src/index.ts",
+    "start": "npx nodemon --watch src --ext ts --exec ts-node src/index.ts",
     "build": "tsc"
   },
   "keywords": [],
