--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "commonjs",
+    "module": "NodeNext", // Changed from "commonjs"
+    "moduleResolution": "NodeNext", // Add this line
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "outDir": "./dist" // Good practice to specify an output directory
   },
   "include": ["src/**/*.ts", "ai.ts"]
 }
