--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate && tsc",
+    "build": "npm install -g prisma && npx prisma generate && tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch index.ts"
   },
